--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemailer": "^6.9.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-social-media-embed": "^2.5.13",
     "swiper": "^11.1.0"
   },
   "devDependencies": {
