--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@remix-run/react": "^2.8.1",
     "@remix-run/serve": "^2.8.1",
     "@vercel/remix": "^2.8.1-patch.2",
+    "framer-motion": "^11.1.7",
     "isbot": "^4.1.0",
-    "motion": "^10.17.0",
     "nodemailer": "^6.9.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
