--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nodemailer": "^6.9.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-social-media-embed": "^2.5.13"
+    "react-social-media-embed": "^2.5.13",
+    "remix-utils": "^7.6.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.8.1",
